# ARF

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  RAG_interface.py  README.md  config.py  config_schema.py  docker-compose.yml  pyproject.toml  standalone_setup.py
.github/workflows/: ci.yml  publish.yml
Data/Knowledge/: supreme_court_cases.json
arf/: __init__.py  document.py  features.py  ingest.py  pipeline.py  query_graph.py  score_parser.py  trainer.py  triage.py
benchmarks/: benchmark_queries.json  cost_comparison.py  cost_tracker.py  eval_dataset.json  eval_dataset_schema.py  generate_eval_dataset.py  generate_graphs.py  hallucination_eval.py  metrics.py  retrain_monthly.py  run_ablation.py  run_ablation_full.py  run_baseline.py  run_benchmark.py  run_cost_analysis.py  run_eval.py  train_reranker.py  us_constitution_test_set.csv
fixtures/: us_constitution_sample.json
preprocess/: README.md  check_embeddings_count.py
preprocess/agency_guidance/: README.md  fetch_agency_guidance.py  ingest_agency_guidance.py  migrate_agency_guidance.py  update_production.ps1  update_production.sh
preprocess/ca_codes/: fetch_ca_codes.py  fetch_ca_codes_alternative.py  fetch_ca_codes_justia.py  fetch_ca_codes_quick_test.py  ingest_ca_codes.py
preprocess/ca_constitution/: fetch_ca_constitution.py  fix_ca_constitution_titles.py
preprocess/ca_regulations/: fetch_ca_regulations_westlaw.py  fix_ca_regulations_json.py  test_westlaw_index.py  test_westlaw_structure.py  westlaw_index.html
preprocess/cfr/: add_cfr_embeddings.py  check_cfr_duplicates.py  check_cfr_embeddings.py  check_cfr_organization.py  check_cfr_progress.py  check_cfr_structure.py  check_document_sections.py  convert_cfr_json.py  fetch_cfr.py  fetch_cfr_from_scratch.py  ingest_cfr_direct.py  ingest_cfr_main.py  update_cfr_json.py
preprocess/federal_register/: ingest_federal_register.py
preprocess/supreme_court_cases/: ingest_public_cases.py  ingest_supreme_court_cases.py
preprocess/us_code/: USLM_FETCH_NOTES.md  add_us_code_embeddings.py  check_clause_numbers.py  check_section_1.py  check_titles.py  check_us_code_duplicates.py  convert_usc_xml_to_json.py  fetch_us_code_uslm.py  identify_duplicate_titles.py  ingest_us_code.py  ingest_us_code_direct.py  normalize_existing_docs.py  remove_empty_text_documents.py  renumber_clauses.py  update_duplicate_titles.py  verify_clause_numbers.py  verify_fixes.py  verify_mongo_update.py  verify_normalized_mongo.py  verify_production_update.py  verify_section_1.py  verify_title_cleaning.py
preprocess/us_constitution/: ingest_alias_us_con_law.py  ingest_con_law.py  ingest_usc_main.py
preprocess/uscis_policy_manual/: TEST_RESULTS.md  UPDATE_LOG_EXAMPLES.md  convert_uscis_html_to_json.py  download_uscis_policy_manual.py  ingest_uscis_policy_manual.py  rename_mongo_collection.py  test_update_pipeline.py  update_uscis_policy_manual.py  verify_output.py  weekly_update_uscis.py
rag_dependencies/: ai_service.py  alias_manager.py  feature_extractor.py  keyword_matcher.py  llm_verifier.py  mlp_reranker.py  mongo_manager.py  openai_service.py  query_manager.py  query_processor.py  vector_search.py
sample-project/: README.md  data.py  ingest.py  query.py  train.py
tests/: test_config_schema.py  test_cost_tracker.py  test_data.py  test_feature_extractor.py  test_integration.py  test_keyword_matcher.py  test_metrics.py  test_mlp_reranker.py  test_query_processor.py
tests/test_arf/: test_document.py  test_features.py  test_ingest.py  test_pipeline.py  test_query_graph.py  test_score_parser.py  test_trainer.py  test_triage.py
