[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arf"
version = "0.1.0"
description = "Advanced Retrieval Framework — a RAG system optimized for legal document search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "openai>=1.0",
    "pymongo>=4.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.5",
    "nltk>=3.8",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["rag_dependencies*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Ignore rules that conflict with the existing codebase style
ignore = [
    "E501",   # line too long (existing code exceeds limits)
    "E741",   # ambiguous variable names (existing code uses these)
    "F401",   # unused imports (some are re-exports)
    "F841",   # unused variables (some are intentional)
    "W605",   # invalid escape sequence (existing regex patterns)
]
