[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arf"
version = "0.1.0"
description = "Advanced Retrieval Framework — a RAG system optimized for legal document search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "openai>=1.0",
    "pymongo>=4.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.5",
    "nltk>=3.8",
    "pydantic>=2.0",
    "voyageai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["rag_dependencies*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rag_dependencies --cov-report=term-missing --cov-fail-under=15"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # line too long (381 violations — fix incrementally)
]

[tool.ruff.lint.per-file-ignores]
# Preprocess scripts manipulate sys.path before imports and use compact one-liners
"preprocess/**/*.py" = ["E402", "E701", "E702", "F401", "F841"]
