[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-rag-framework"
version = "0.2.2"
description = "Advanced Retrieval Framework — dependency-free retrieval pipeline toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Zero required dependencies — the arf package is pure Python
dependencies = []

[project.urls]
Homepage = "https://github.com/jager47X/ARF"
Repository = "https://github.com/jager47X/ARF"

[project.optional-dependencies]
ml = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "numpy>=1.24",
]
# Full production dependencies (for rag_dependencies)
full = [
    "numpy>=1.24",
    "openai>=1.0",
    "pymongo>=4.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.5",
    "nltk>=3.8",
    "pydantic>=2.0",
    "voyageai>=0.3",
]

[tool.setuptools.packages.find]
include = ["arf*", "rag_dependencies*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=arf --cov=rag_dependencies --cov-report=term-missing --cov-fail-under=10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # line too long (381 violations — fix incrementally)
]

[tool.ruff.lint.per-file-ignores]
# Preprocess scripts manipulate sys.path before imports and use compact one-liners
"preprocess/**/*.py" = ["E402", "E701", "E702", "F401", "F841"]
